--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
-  "homepage": "https://<SifenAbduselam>.github.io/anjelo-photography",
+  "homepage": "https://SifenAbduselam.github.io/anjelo-photography",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -19,7 +19,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.1",
-    "react-toastify": "^11.0.5",
+    "react-toastify": "^11.0.5"
     
   },
   "devDependencies": {
