--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "start": "node server.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.56.0",
+    "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
+    "express": "^5.1.0",
+    "firebase": "^12.1.0",
     "framer-motion": "^12.23.12",
     "gh-pages": "^6.3.0",
+    "node-fetch": "^3.3.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.1",
     "react-toastify": "^11.0.5"
-    
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -35,5 +40,17 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "vite": "^7.1.2"
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/<SifenAbduselam>/anjelo-photography.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/<SifenAbduselam>/anjelo-photography/issues"
   }
 }
